--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="header">
             <img src="./img/header.jpg" alt="logo">
+            <img class="mobil" src="./img/header_mobil.png" alt="mobilelogo">
     </div>        
     <div id="grid-container">
         <div class="grid1">           
