--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RWBY</title>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-    <div id="header">
-            <img src="./img/header.jpg" alt="logo">
-            <img class="mobil" src="./img/header_mobil.png" alt="mobilelogo">
-    </div>        
-    <div id="grid-container">
-        <div class="grid1">           
-            <div class="col1">R</div>
-            <div class="col1">W</div>
-            <div class="col1">B</div>
-            <div class="col1">Y</div>
+    <div id="container">
+        <div id="header">
+            <img id="mobile-header" src="./img/header_mobil.png" alt="RWBY">
+            <img id="full-header" src="./img/header.jpg" alt="RWBY">
         </div>        
-        <div class="grid2"> 
-            <div class="col2">
-                <img class="img" src="./img/R.png" alt="R">
-                <p class="p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit unde esse itaque, sint velit nisi repellendus commodi saepe quasi, cumque ad enim voluptatibus dolore natus iste ducimus. Quos quisquam autem sequi deserunt corrupti magni, ullam eos nemo. Error, corporis!</p>
+        <div id="content">
+            <div class="nav">
+                <ul>
+                    <li><a href="#">R</a></li>
+                    <li><a href="#">W</a></li>
+                    <li><a href="#">B</a></li>
+                    <li><a href="#">Y</a></li>
+                </ul>
             </div>
-            <div class="col2">
-                <img class="img" src="./img/W.png" alt="W">
-                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit unde esse itaque, sint velit nisi repellendus commodi saepe quasi, cumque ad enim voluptatibus dolore natus iste ducimus. Quos quisquam autem sequi deserunt corrupti magni, ullam eos nemo. Error, corporis!</p>
+            <div id="grid-container">
+                <div class="Description">
+                    <img src="./img/R.png" alt="R" width="680px" height="1000px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, eos. Quibusdam ipsa perferendis, corporis molestias voluptate veritatis dolorem nulla illo autem blanditiis facere necessitatibus quis soluta, eveniet porro earum! Corrupti, dolorem veniam error ex dolores at quae velit perferendis soluta.</p>
+                </div>
+                <div class="Description">
+                    <img src="./img/W.png" alt="W" width="680px" height="1000px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, eos. Quibusdam ipsa perferendis, corporis molestias voluptate veritatis dolorem nulla illo autem blanditiis facere necessitatibus quis soluta, eveniet porro earum! Corrupti, dolorem veniam error ex dolores at quae velit perferendis soluta.</p>
+                </div>
+                <div class="Description">
+                    <img src="./img/B.png" alt="B" width="680px" height="1000px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, eos. Quibusdam ipsa perferendis, corporis molestias voluptate veritatis dolorem nulla illo autem blanditiis facere necessitatibus quis soluta, eveniet porro earum! Corrupti, dolorem veniam error ex dolores at quae velit perferendis soluta.</p>
+                </div>
+                <div class="Description">
+                    <img src="./img/Y.png" alt="Y" width="680px" height="1000px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, eos. Quibusdam ipsa perferendis, corporis molestias voluptate veritatis dolorem nulla illo autem blanditiis facere necessitatibus quis soluta, eveniet porro earum! Corrupti, dolorem veniam error ex dolores at quae velit perferendis soluta.</p>
+                </div>
             </div>
-            <div class="col2">
-                <img class="img" src="./img/B.png" alt="B">
-                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit unde esse itaque, sint velit nisi repellendus commodi saepe quasi, cumque ad enim voluptatibus dolore natus iste ducimus. Quos quisquam autem sequi deserunt corrupti magni, ullam eos nemo. Error, corporis!</p>
-            </div>
-            <div class="col2">
-                <img class="img" src="./img/Y.png" alt="Y">
-                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit unde esse itaque, sint velit nisi repellendus commodi saepe quasi, cumque ad enim voluptatibus dolore natus iste ducimus. Quos quisquam autem sequi deserunt corrupti magni, ullam eos nemo. Error, corporis!</p>
-            </div>
-        </div>        
+        </div>
     </div>
 </body>
 </html>
